openshift/service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "clamavscan"
  labels:
    version: VERSION_PLACEHOLDER
spec:
  ports:
    - name: 8080-tcp
      protocol: "TCP"
      port: 8080
      targetPort: 8080
  selector:
    app: "clamavscan"
    deploymentconfig: "clamavscan"
  type: "ClusterIP"
  sessionAffinity: "None"
